sprint_5/ add follow shop
