# api/Shop/shop.controller.js
@@ -9,6 +9,11 @@ router.get("/shop/listInf", listInf);
 router.get("/shop/:id", getUserProfile);
 router.post("/shop/search", searchShop);
 
+router.put("/shop/follow/:id", followShop);
+router.put("/shop/unfollow/:id", unfollowShop);
+router.get("/shop/follow/:id", getFollow);
+router.get("/user/follow", getMyFollowUps);
+
 module.exports = router;
 
 function getMyProfile(req, res, next) {
@@ -56,4 +61,40 @@ function searchShop(req, res, next) {
                 : res.status(400).json({ message: "User can't be searched" })
                 )
         .catch(err => next(err));        
+}
+
+function followShop(req, res, next) {
+    userService
+        .followShop(req)
+        .then(list => {
+            res.status(list.status).json(list.message);
+        })
+        .catch(err => next(err));
+}
+
+function unfollowShop(req, res, next) {
+    userService
+        .unfollowShop(req)
+        .then(list => {
+            res.status(list.status).json(list.message);
+        })
+        .catch(err => next(err));
+}
+
+function getFollow(req, res, next) {
+    userService
+        .getAllFollow(req)
+        .then(list => {
+            res.status(list.status).json(list.message);
+        })
+        .catch(err => next(err));
+}
+
+function getMyFollowUps(req, res, next) {
+    userService
+        .getMyFollowUps(req)
+        .then(list => {
+            res.status(list.status).json(list.message);
+        })
+        .catch(err => next(err));
 }
